--- a/probando/Views/Producto/Index.cshtml
+++ b/probando/Views/Producto/Index.cshtml
@@ -32,6 +32,8 @@
                 <td>@(item.Estado ? "Sí" : "No")</td>
                 <td>
                     <a asp-action="Details" asp-route-codigo="@item.CodigoDeBarra" class="btn btn-info btn-sm">Ver detalles</a>
+                    <a asp-action="Edit" asp-route-codigo="@item.CodigoDeBarra" class="btn btn-btn-warning btn-sm">Editar</a>
+                    <a asp-action="Delete" asp-route-codigo="@item.CodigoDeBarra" class="btn btn-danger btn-sm">Eliminar</a>
                 </td>
             </tr>
         }
